k8s/overlays/dev/deployment.yaml
#k8s/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: dev
spec:
  replicas: 4
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: lexmarkkubernetes/my-app:dev
          ports:
            - containerPort: 8080
  strategy:
    canary:
      steps:
        - setWeight: 25       # Send 25% of traffic to the new version
        - pause:              # Pause to verify
            duration: 2m
        - setWeight: 50       # Send 50% of traffic
        - pause:
            duration: 2m
        - setWeight: 100      # Complete traffic shift
      maxSurge: 1
      maxUnavailable: 0
